--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -57,4 +57,22 @@
     <string name="confirm_delete_message">This action is irreversible</string>
     <string name="cancel">Cancel</string>
     <string name="delete">Delete</string>
+
+    <string name="profile_title">Profile</string>
+    <string name="profile_no_user">No user logged in.</string>
+    <string name="profile_display_name_label">Display name</string>
+    <string name="profile_email_label">Email</string>
+    <string name="profile_edit_button">Edit profile</string>
+    <string name="profile_logout_button">Log out</string>
+
+    <string name="edit_profile_title">Edit profile</string>
+    <string name="edit_profile_display_name">Display name</string>
+    <string name="edit_profile_password_section">Password</string>
+    <string name="edit_profile_old_password">Current password</string>
+    <string name="edit_profile_new_password">New password</string>
+    <string name="edit_profile_confirm_new_password">Confirm new password</string>
+
+    <string name="save">Save</string>
+    <string name="loading">Loading…</string>
+
 </resources>
