--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,60 +1,95 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Secret Santa</string>
 
     <!-- Auth -->
-    <string name="login_title">Login</string>
-    <string name="register_title">Register</string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
-    <string name="display_name">Display Name</string>
-    <string name="login">Login</string>
-    <string name="register">Register</string>
-    <string name="already_have_account">Already have an account?</string>
-    <string name="no_account">No account?</string>
+    <string name="email_label">Email</string>
+    <string name="password_label">Mot de passe</string>
+    <string name="login_button">Connexion</string>
+    <string name="register_button">S\'inscrire</string>
+    <string name="logout">Déconnexion</string>
+    <string name="no_account">Pas de compte ? S\'inscrire</string>
+    <string name="already_have_account">Déjà un compte ? Se connecter</string>
+    <string name="display_name">Nom d\'affichage</string>
+    <string name="confirm_password">Confirmer le mot de passe</string>
+
+    <!-- Password validation -->
+    <string name="password_too_short">Le mot de passe doit contenir au moins 8 caractères</string>
+    <string name="password_no_uppercase">Le mot de passe doit contenir au moins une majuscule</string>
+    <string name="password_no_lowercase">Le mot de passe doit contenir au moins une minuscule</string>
+    <string name="password_no_digit">Le mot de passe doit contenir au moins un chiffre</string>
+    <string name="password_no_special">Le mot de passe doit contenir au moins un caractère spécial</string>
+    <string name="passwords_dont_match">Les mots de passe ne correspondent pas</string>
+
+    <!-- Navigation -->
+    <string name="nav_home">Accueil</string>
+    <string name="nav_secret_santas">Mes Secret Santas</string>
+    <string name="nav_calendar">Calendrier</string>
+    <string name="nav_profile">Profil</string>
 
     <!-- Secret Santa List -->
-    <string name="my_secret_santas">My Secret Santas</string>
-    <string name="create_secret_santa">Create Secret Santa</string>
-    <string name="no_secret_santas">No Secret Santas</string>
-
-    <string name="confirm_password">Confirm password</string>
-    <string name="password_too_short">Password must be at least 8 characters</string>
-    <string name="password_no_uppercase">Password must contain at least one uppercase letter</string>
-    <string name="password_no_lowercase">Password must contain at least one lowercase letter</string>
-    <string name="password_no_digit">Password must contain at least one digit</string>
-    <string name="password_no_special">Password must contain at least one special character</string>
-    <string name="passwords_dont_match">Passwords do not match</string>
+    <string name="my_secret_santas">Mes Secret Santas</string>
+    <string name="no_secret_santas">Aucun Secret Santa pour le moment</string>
+    <string name="create_secret_santa">Créer un Secret Santa</string>
+    <string name="participants_count">%1$d participants</string>
+    <string name="deadline_label">Date limite : %1$s</string>
 
     <!-- Create Secret Santa -->
-    <string name="create_secret_santa_title">New Secret Santa</string>
-    <string name="group_name">Group Name</string>
-    <string name="group_name_hint">Ex: Family Christmas 2025</string>
-    <string name="deadline">Deadline</string>
-    <string name="select_date">Select date</string>
+    <string name="create_secret_santa_title">Créer un Secret Santa</string>
+    <string name="general_info">Informations générales</string>
+    <string name="group_name">Nom du groupe</string>
+    <string name="group_name_hint">Ex: Famille Noël 2025</string>
+    <string name="group_name_required">Nom du groupe *</string>
+    <string name="deadline">Date limite</string>
+    <string name="deadline_required">Date limite *</string>
+    <string name="select_date">Sélectionner une date</string>
+    <string name="budget">Budget maximum</string>
+    <string name="budget_hint">Ex: 30€</string>
+    <string name="description">Description / Informations</string>
+    <string name="description_hint">Ex: RDV à la cafet le 24 décembre à midi</string>
     <string name="participants">Participants</string>
-    <string name="add_participant">Add participant</string>
-    <string name="participant_name">Participant name</string>
-    <string name="participant_email">Participant email</string>
-    <string name="remove_participant">Remove</string>
-    <string name="create_group">Create group</string>
-    <string name="error_empty_name">Group name is required</string>
-    <string name="error_no_participants">Add at least 2 participants</string>
-    <string name="error_invalid_email">Invalid email</string>
+    <string name="add_participant">Ajouter un participant</string>
+    <string name="participant_name">Nom</string>
+    <string name="participant_name_required">Nom *</string>
+    <string name="participant_name_hint">Ex: Marie Dupont</string>
+    <string name="participant_email">Email</string>
+    <string name="participant_email_required">Email *</string>
+    <string name="participant_email_hint">Ex: marie@exemple.com</string>
+    <string name="add_button">Ajouter</string>
+    <string name="remove_participant">Retirer</string>
+    <string name="create_group">Créer le Secret Santa</string>
+    <string name="participants_list_count">Participants (%1$d)</string>
+
+    <!-- Validation errors -->
+    <string name="error_empty_name">Le nom du groupe est requis</string>
+    <string name="error_no_participants">Au moins 2 participants requis</string>
+    <string name="error_invalid_email">Email invalide</string>
+    <string name="error_duplicate_email">Cet email est déjà utilisé</string>
+    <string name="error_select_deadline">Sélectionnez une date limite</string>
+    <string name="error_name_required">Le nom est requis</string>
+    <string name="error_email_required">L\'email est requis</string>
 
     <!-- Secret Santa Details -->
-    <string name="details_title">Secret Santa Details</string>
-    <string name="edit_secret_santa">Edit</string>
-    <string name="delete_secret_santa">Delete</string>
-    <string name="participants_list">Participants list</string>
-    <string name="draw_not_done">Draw not done</string>
-    <string name="draw_done">Draw done</string>
-    <string name="perform_draw">Perform draw</string>
-    <string name="your_giftee">You give to:</string>
-    <string name="secret_messaging">Secret messaging</string>
-    <string name="wishlist">Wishlist</string>
-    <string name="confirm_delete_title">Delete this Secret Santa?</string>
-    <string name="confirm_delete_message">This action is irreversible</string>
-    <string name="cancel">Cancel</string>
-    <string name="delete">Delete</string>
+    <string name="details_title">Détails du Secret Santa</string>
+    <string name="edit_secret_santa">Modifier</string>
+    <string name="delete_secret_santa">Supprimer</string>
+    <string name="organizer">Organisateur</string>
+    <string name="you_label">Vous</string>
+
+    <!-- Draw -->
+    <string name="draw_not_done">Tirage non effectué</string>
+    <string name="draw_done">Tirage effectué</string>
+    <string name="perform_draw">Tirer au sort</string>
+    <string name="your_giftee">Vous offrez à :</string>
+    <string name="view_wishlist">Voir sa liste de souhaits</string>
+
+    <!-- Actions -->
+    <string name="secret_messaging">Messagerie secrète</string>
+    <string name="wishlist">Liste de souhaits</string>
+
+    <!-- Dialogs -->
+    <string name="confirm_delete_title">Supprimer ce Secret Santa ?</string>
+    <string name="confirm_delete_message">Cette action est irréversible</string>
+    <string name="cancel">Annuler</string>
+    <string name="delete">Supprimer</string>
+    <string name="ok">OK</string>
 </resources>
